fix(mobile): fix chat name/header hiding on mobile web

--- a/frontend/src/components/Homepage.module.scss
+++ b/frontend/src/components/Homepage.module.scss
@@ -12,7 +12,7 @@
 
   @media (max-width: 768px) {
     width: 100vw;
-    height: 100vh;
+    height: 100dvh;
     margin: 0;
   }
 }
@@ -82,6 +82,7 @@
 
 .messagesContainer {
   width: 70%;
+  height: 100%;
 
   @media (max-width: 768px) {
     width: 100%;
