--- a/frontend/src/components/messagePage/MesaggePage.module.scss
+++ b/frontend/src/components/messagePage/MesaggePage.module.scss
@@ -1,11 +1,15 @@
 .outerMessagePageContainer {
   width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
   position: relative;
 }
 
 .messagePageHeaderContainer {
   width: 100%;
   background-color: var(--bg-header);
+  flex-shrink: 0;
   height: 11vh;
   border-left: solid 1px var(--border-color);
   box-sizing: border-box;
@@ -30,7 +34,7 @@
 
   @media (max-width: 768px) {
     padding: 0.5rem 1rem;
-    
+
     p {
       font-size: 0.9rem;
       white-space: nowrap;
@@ -46,12 +50,11 @@
   padding-right: 3rem;
   overflow-y: auto;
   background-color: var(--bg-message-content);
-  height: 66vh;
+  flex-grow: 1;
 
   @media (max-width: 768px) {
     padding-left: 1rem;
     padding-right: 1rem;
-    height: calc(100vh - 16vh); // Adjust based on header and footer
   }
 }
 
@@ -67,6 +70,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  flex-shrink: 0;
   height: 13vh;
 
   @media (max-width: 768px) {
