--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -32,6 +32,8 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   max-width: 100vw;
+  height: 100dvh;
+  overflow: hidden;
   background-color: var(--bg-main);
   color: var(--text-main);
 }
@@ -40,4 +42,3 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
-
